# PCVT2D

./: CMakeLists.txt
Geex/CVT/: AABB_tree_cgal.h  custom_rvd.h  delaunay.h  regular_CGAL.cpp  topo_poly_mesh.cpp  topo_poly_mesh.h
Geex/properties/: property.h
data/polygons/: big_circle.line  bird.line  box_circle.line  butterfly.line  cat10.line  cat13_const.line  circle.line
data/shaders/: CVT2d_fp.glsl  CVT2d_vp.glsl  CVT3d_fp.glsl  CVT3d_vp.glsl  hdr_fp.glsl  hdr_vp.glsl
data/surfaces/: 1.seg  cat0.off  face.iinc  fandisk.seg  joint.clr  joint.seg  sculpt.clr  sculpt.fea  sculpt.pts  sculpt.seg
experiments/: 拓扑Delaunay优化.docx
gx_pcvt2d/: CMakeLists.txt  circle1.line  cvt.cpp  cvt.h  delaunay.cpp  delaunay.h  delaunay_cgal.h  delaunay_cvt.cpp  delaunay_cvt.h  delaunay_graphics.cpp  delaunay_graphics.h  delaunay_io.cpp  delaunay_io.h  geometry.h  irreg_editor.cc  irreg_editor.h  lloyd_energy.h  main.cpp  out.0.pts  out.1.pts  out.4.pts  out.5.pts  out.border.pts  out.merged.pts  out.pts  pd.cpp  pd.h  polygons.cpp  reg.pts  sampling.cpp  sampling.h  triangle_area.cpp  triangle_area.h  weighted_tree.cpp  weighted_tree.h
gx_pcvt2d/PDSample/: PDSample.cpp  PDSampling.cpp  PDSampling.h  WeightedDiscretePDF.cpp  WeightedDiscretePDF.h
gx_pcvt2d/PDSample/unuse/: Makefile  PDSample.cpp  README.txt
gx_pcvt2d/ccvt/: ccvt_main.cpp  ccvt_optimizer.h
gx_pcvt2d/data/10/: pcvt10_1.pts  pcvt10_2.pts  pcvt10_3.pts  pcvt10_4.pts  pcvt10_5.pts  pcvt10_6.pts  pcvt10_7.pts
gx_pcvt2d/data/20/: pcvt20_1.pts  pcvt20_10.pts  pcvt20_11.pts  pcvt20_12.pts  pcvt20_13.pts  pcvt20_14.pts  pcvt20_15.pts  pcvt20_2.pts  pcvt20_3.pts  pcvt20_4.pts  pcvt20_5.pts  pcvt20_6.pts  pcvt20_7.pts  pcvt20_8.pts  pcvt20_9.pts
gx_pcvt2d/data/6/: pcvt6_1.pts  pcvt6_2.pts  pcvt6_3.pts  pcvt6_4.pts  pcvt6_5.pts
gx_pcvt2d/data/auto_save/: rename_pts.py
gx_pcvt2d/psa-src/: fileio.cpp  fileio.h  fileutil.h  measurements.cpp  measurements.h  psa.cpp  psa.h  spectralanalysis.cpp  spectralanalysis.h  util.h
gx_pcvt2d/psa-src/nouse/: Makefile  README  main.cpp
(+7 files in other folders)
